--- a/css/header.css
+++ b/css/header.css
@@ -2,6 +2,10 @@
   padding: 25px 0;
 
 }
+.container-gray {
+  margin: 0 -30px;
+  max-width: 1440px;
+}
 .header-wrap{
   background: #F1F1F1;
   padding: 25px 0 25px 45px;
@@ -14,7 +18,7 @@
   margin-bottom: 30px;
 }
 .header__text {
-  max-width: 1080px;
+
   line-height: 120%;
   font-weight: 400;
   font-size: 20px;
