--- a/css/header.css
+++ b/css/header.css
@@ -3,8 +3,8 @@
 
 }
 .container-gray {
-  margin: 0 -30px;
-  max-width: 1440px;
+  margin: 0 auto;
+  max-width: 1700px;
 }
 .header-wrap{
   background: #F1F1F1;
