--- a/css/dom.css
+++ b/css/dom.css
@@ -14,7 +14,7 @@
   margin-bottom: 30px;
 }
 .text-wrap {
-  min-width: 1080px;
+  width: 100%;
   max-width: 1080px;
   padding: 15px 30px;
   text-align: left;
@@ -38,10 +38,10 @@
   margin-bottom: 30px;
 }
 .img-big{
-
+  width: 100%;
 }
 .img-middle {
-  display: block;
+  width: 100%;
   line-height: 0;
   margin: 0;
   border: 0;
@@ -55,6 +55,7 @@
   left: 5%;
 }
 .img-devtools {
-  position: relative;
-  left: 2%;
+  margin: 0 auto;
+  /*position: relative;*/
+  /*left: 1%;*/
 }
