--- a/css/global.css
+++ b/css/global.css
@@ -12,6 +12,7 @@ body, html {
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-size: 20px;
+  font-weight: 400;
   line-height: 120%;
 }
 
