--- a/css/header.css
+++ b/css/header.css
@@ -9,7 +9,7 @@
 .container-gray {
   max-width: 1100px;
   background: #F1F1F1;
-  padding: 25px 0 25px 58px;
+  padding: 25px 30px 25px 58px;
   border-radius: 10px;
   margin: 0 auto;
 }
