--- a/css/result.css
+++ b/css/result.css
@@ -1,6 +1,14 @@
 .footer {
   padding: 25px 0;
 }
+.container-gray {
+  max-width: 1100px;
+  background: #F1F1F1;
+  padding: 25px 25px 25px 25px;
+  /*margin: 0 -25px;*/
+  border-radius: 10px;
+  margin: 0 auto;
+}
 .results__title {
   font-weight: 700;
   font-size: 44px;
